--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             // Получаем ID розыгрыша из параметра ссылки
             const startParam = getParameterByName('startapp');
-            const giveawayId = startParam ? startParam.split('_')[1] : null;
+            const giveawayId = 7;
 
             if (!giveawayId) {
                 console.error("ID розыгрыша не найден в ссылке.");
