--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             if (!giveawayId) {
                 console.error("ID розыгрыша не найден в ссылке.");
-                alert("Ошибка: ID розыгрыша не найден в ссылке.");
+                alert("Ошибка: ID розыгрыша не найде 23н в ссылке.");
                 return;
             }
 
