--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       setTimeout(() => {
         console.log("Закрытие мини-аппа...");
         tg.close(); // Закрываем мини-апп после отправки
-      }, 500); // Задержка 500 мс
+      }, 1000); // Увеличиваем задержку до 1000 мс для надежности
     }
   </script>
 </body>
