--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
         Telegram.WebApp.ready();
 
         // Функция для извлечения параметров из URL
-        function getStartParam() {
-            const initData = Telegram.WebApp.initData;
-            if (!initData) return null;
-
-            // Парсим initData
-            const params = new URLSearchParams(initData);
-            return params.get('startapp');
-        }
-
+            function getStartParam() {
+            // Если доступно значение initDataUnsafe.start_param, используем его
+            if (Telegram && Telegram.WebApp && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.start_param) {
+                return Telegram.WebApp.initDataUnsafe.start_param;
+            }
+            // Иначе пытаемся извлечь параметр из window.location.search
+            const params = new URLSearchParams(document.location.search);
+            return params.get('start_param') || params.get('startapp');
+            }
 
         function sendParticipation() {
             let tg = window.Telegram.WebApp;
