--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         Telegram.WebApp.ready();
 
         // Функция для извлечения параметров из URL
-            function getStartParam() {
+        function getStartParam() {
             // Если доступно значение initDataUnsafe.start_param, используем его
             if (Telegram && Telegram.WebApp && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.start_param) {
                 return Telegram.WebApp.initDataUnsafe.start_param;
@@ -50,7 +50,7 @@
             // Иначе пытаемся извлечь параметр из window.location.search
             const params = new URLSearchParams(document.location.search);
             return params.get('start_param') || params.get('startapp');
-            }
+        }
 
         function sendParticipation() {
             let tg = window.Telegram.WebApp;
@@ -80,12 +80,12 @@
             console.log("Giveaway ID:", giveawayId);
 
             // Отправляем данные в бот
-            const botToken = '7790467084:AAGYK-Gm60ailV6B0q5K4bOgNaQ01oOu0L0';  
-            tg.sendData(`join_${giveawayId}`)
+            const botToken = '7790467084:AAGYK-Gm60ailV6B0q5K4bOgNaQ01oOu0L0';  // Замените на ваш API токен
+            const message = `Пользователь ${userId} участвует в розыгрыше ${giveawayId}`;
 
             // Формируем URL для запроса к Telegram API
             const url = `https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${userId}&text=${encodeURIComponent(message)}`;
-            
+            tg.sendData(`join_${giveawayId}`)
 
             // Отправка запроса через fetch
             fetch(url)
